# py-elotl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: MORPHOLOGY.md  ORTHOGRAPHY.md
elotl/corpora/: kolo.csv  tsunkua.csv
elotl/corpus/: __init__.py
elotl/huave/: morphology.py
elotl/huave/data/: huv.mor.att  huv.mor.tsv
elotl/maya/: morphology.py
elotl/nahuatl/: __init__.py  config.py  morphology.py  orthography.py
elotl/nahuatl/data/: azz.mor.att  azz.mor.tsv  nhi.mor.att  nhi.mor.tsv
elotl/nahuatl/fst/: Makefile  attapply.py  fon-ack.lexc  fon-sep.lexc  fst_ortho_normalizer.py  orig-fon.lexc  orthography.py
elotl/nahuatl/fst/att/: fon-ack.att  fon-sep-u-j.att  fon-sep-w-h.att  orig-fon.att  orig-sep-u-j.att
elotl/nahuatl/fst/hfst/: fon-ack.hfst  fon-sep.hfst  orig-ack.hfst  orig-fon.hfst  orig-sep.hfst
elotl/nahuatl/fst/lexc/: fon-ack.lexc  fon-sep-u-j.lexc  fon-sep-w-h.lexc  fon-sep.lexc  orig-fon.lexc
elotl/otomi/: __init__.py  config.py  morphology.py  orthography.py
elotl/otomi/data/: ote.mor.att  ote.mor.tsv
elotl/utils/: config.py  morphology.py  util.py
elotl/utils/fst/: Makefile  attapply.py
elotl/utils/fst/att/: fon-ack.att  fon-ilv.att  fon-sep-u-j.att  fon-sep-w-h.att  fon-sep.att  orig-fon.att
elotl/utils/fst/att/otomi/: fon-inali.att  fon-otq.att  fon-ots.att  fon-rfe.att  orig-fon.att
elotl/utils/fst/hfst/: fon-ack.hfst  fon-ilv.hfst  fon-inali.hfst  fon-sep-u-j.hfst  fon-sep-w-h.hfst  fon-sep.hfst  orig-ack.hfst  orig-fon.hfst  orig-ilv.hfst  orig-inali.hfst  orig-sep-u-j.hfst  orig-sep-w-h.hfst  orig-sep.hfst
elotl/utils/fst/lexc/: fon-ilv.lexc  fon-sep-u-j.lexc  fon-sep.lexc  orig-fon.lexc
elotl/utils/fst/lexc/nahuatl/: fon-sep.lexc
elotl/utils/fst/lexc/otomi/: fon-inali.lexc  fon-otq.lexc  fon-ots.lexc  fon-rfe.lexc  orig-fon.lexc
elotl/wixarika/: __init__.py
elotl_pkg/: __init__.py
tests/: corpus.py  test_huave_morphology.py  test_nahuatl_morphology.py  test_nahuatl_orthography.py  test_otomi_morphology.py  test_otomi_orthography.py
