[tool.poetry]
name = "elotl"
version = "0.1.0"
description = "Python package for Natural Language Processing (NLP), focused on low-resource languages spoken in Mexico."
authors = [
	"Paul Aguilar <paul.aguilar.enriquez@hotmail.com>",
	"Robert Pugh <robertpugh408@gmail.com>",
	"Diego A. Barriga Martínez <dbarriga@ciencias.unam.mx>"
]
maintainers = ["Robert Pugh <robertpugh408@gmail.com>"]
license = "MLP-2.0"
readme = "README.md"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
        "Operating System :: OS Independent",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Natural Language :: Spanish",
        "Topic :: Utilities",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Development Status :: 4 - Beta",
]
include = ["MANIFEST.in"]

[project.urls]
Homepage = "https://elotl.mx"
Documentation = "https://github.com/ElotlMX/py-elotl/tree/master/docs"
Repository = "https://github.com/ElotlMX/py-elotl"
Issues = "https://github.com/ElotlMX/py-elotl/issues"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
